--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,9 +1,7 @@
-name: .NET
+name: push
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 jobs:
@@ -23,7 +21,7 @@ jobs:
       run: dotnet build --no-restore -c Release
     - name: Test
       run: dotnet test
-    - name: Publish Nuget
+    - name: Publish Nuget Panosen.CodeDom.CSharp
       run: dotnet nuget push Panosen.CodeDom.CSharp/bin/Release/Panosen.CodeDom.CSharp.*.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.PANOSEN_NUGET_API_KEY}} --skip-duplicate
-    - name: Publish Nuget
+    - name: Publish Nuget Panosen.CodeDom.CSharp.Engine
       run: dotnet nuget push Panosen.CodeDom.CSharp.Engine/bin/Release/Panosen.CodeDom.CSharp.Engine.*.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.PANOSEN_NUGET_API_KEY}} --skip-duplicate
