--- a/Panosen.CodeDom.CSharp/Panosen.CodeDom.CSharp.csproj
+++ b/Panosen.CodeDom.CSharp/Panosen.CodeDom.CSharp.csproj
@@ -11,6 +11,7 @@
     <DocumentationFile>bin\$(Configuration)\Panosen.CodeDom.CSharp.xml</DocumentationFile>
     <PackageIcon>panosen.png</PackageIcon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/panosen/panosen-codedom-csharp</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
